fix(any.do): Hide in list view when delete button is visible

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -441,6 +441,10 @@ SingleTaskPaneToolbar .toggl-button.asana-board, /* new ui v1 */
   visibility: visible;
 }
 
+.TaskItemControls--in + .toggl-button.anydo--2018__taskItem {
+  visibility: hidden;
+}
+
 /********* WUNDERLIST *********/
 .toggl-button.wunderlist {
   text-decoration: none;
